PatientController bugs are fixed